samples/_failures_safe/1761552859_b7a9cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a637cee.c: In function ‘main’:
./samples/SAFE/__tmp_1a637cee.c:156:5: error: expected declaration or statement at end of input
  156 |     input_matrix(&mat2, "B");
      |     ^~~~~~~~~~~~
